src/test/examples/custom/invalid/semanticErr/class/constructorMustHaveSameAttributeNamesAsParam.wacc
# Constructor must include the same name for attributes

begin
  class H is 
    private int v
    H(int k) end
  end
  int u = 0
end